# FastMath2

./: .gitignore  CMakeLists.txt  README.md  develop.cpp
FastMath/: FastMath.hpp
FastMath/Algorithm/: CurveFitting.hpp  qcqp.hpp  quadprog.hpp
FastMath/Core/: Core.hpp  Dual.hpp  Matrix.hpp
FastMath/Impl/: Common.hpp  impl.hpp
FastMath/Impl/basic/: complex.hpp  rand.hpp
FastMath/Impl/linear/: equation.hpp  matrix.hpp
FastMath/Impl/nonlinear/: optimization.hpp  solver.hpp
FastMath/Impl/util/: dbg.h  filter.hpp  function.hpp
cmake/: TestDepend.cmake
test/: CMakeLists.txt  matrix_test.cpp  nonlinear_solver_test.cpp
